--- a/index.html
+++ b/index.html
@@ -126,6 +126,29 @@
                 </div>
             </div>
 
+            <div class="scene nus-006">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </body>
