improved angles on this branch, click funcs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
     <head>
         <link href="css/style.css" rel="stylesheet" media="screen" />
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="js/funcs.js"></script>
     </head>
 
     <body>
@@ -126,7 +129,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-006">
+            <!--<div class="scene nus-006">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -147,7 +150,7 @@
                         <div class="photon-shader"></div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
         </div>
 
