--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 
     <head>
+        <meta charset="utf-8" />
+        
         <link href="css/style.css" rel="stylesheet" media="screen" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -12,6 +14,17 @@
     </head>
 
     <body>
+
+        <div class="c-buttons">
+            <button class="btn-upp">&utrif;</button>
+            <button class="btn-lft">&ltrif;</button>
+            <button class="btn-rgt">&rtrif;</button>
+            <button class="btn-dwn">&dtrif;</button>
+        </div>
+        <div class="ab-buttons">
+            <button class="btn-a">A</button>
+            <button class="btn-b">B</button>
+        </div>
 
         <div id="tridiv">
             <div class="scene nus-001">
