10 items added, fixes and new controls

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
     <head>
         <meta charset="utf-8" />
-        
-        <link href="css/style.css" rel="stylesheet" media="screen" />
 
+        <link href="css/style.css" rel="stylesheet" media="screen" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+
         <script src="js/funcs.js"></script>
     </head>
 
@@ -27,7 +27,7 @@
         </div>
 
         <div id="tridiv">
-            <div class="scene nus-001">
+            <div class="scene nus-010">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-002">
+            <div class="scene nus-009">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-003">
+            <div class="scene nus-008">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -96,7 +96,30 @@
                 </div>
             </div>
 
-            <div class="scene nus-004">
+            <div class="scene nus-007">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="scene nus-006">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -142,7 +165,7 @@
                 </div>
             </div>
 
-            <!--<div class="scene nus-006">
+            <div class="scene nus-004">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -163,7 +186,76 @@
                         <div class="photon-shader"></div>
                     </div>
                 </div>
-            </div>-->
+            </div>
+
+            <div class="scene nus-003">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="scene nus-002">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="scene nus-001">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
