--- a/index.html
+++ b/index.html
@@ -25,9 +25,126 @@
             <button class="btn-a">A</button>
             <button class="btn-b">B</button>
         </div>
+        <div class="d-pad">
+            <button class="dir-upp">&utrif;</button>
+            <button class="dir-lft">&ltrif;</button>
+            <button class="dir-rgt">&rtrif;</button>
+            <button class="dir-dwn">&dtrif;</button>
+        </div>
 
         <div id="tridiv">
-            <div class="scene nus-010">
+            <!--<div class="scene nus-015 row-03">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="scene nus-014 row-03">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="scene nus-013 row-03">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="scene nus-012 row-03">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="scene nus-011 row-03">
+                <div class="shape cuboid-1 cub-1">
+                    <div class="face ft">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bk">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face rt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face lt">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face bm">
+                        <div class="photon-shader"></div>
+                    </div>
+                    <div class="face tp">
+                        <div class="photon-shader"></div>
+                    </div>
+                </div>
+            </div>-->
+
+            <div class="scene nus-010 row-02">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -50,7 +167,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-009">
+            <div class="scene nus-009 row-02">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -73,7 +190,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-008">
+            <div class="scene nus-008 row-02">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -96,7 +213,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-007">
+            <div class="scene nus-007 row-02">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -119,7 +236,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-006">
+            <div class="scene nus-006 row-02">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -142,7 +259,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-005">
+            <div class="scene nus-005 row-01">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -165,7 +282,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-004">
+            <div class="scene nus-004 row-01">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -188,7 +305,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-003">
+            <div class="scene nus-003 row-01">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -211,7 +328,7 @@
                 </div>
             </div>
 
-            <div class="scene nus-002">
+            <div class="scene nus-002 row-01">
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
@@ -234,7 +351,8 @@
                 </div>
             </div>
 
-            <div class="scene nus-001">
+            <div class="scene nus-001 row-01">
+                <!--<span>01</span>-->
                 <div class="shape cuboid-1 cub-1">
                     <div class="face ft">
                         <div class="photon-shader"></div>
